--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
   "files.exclude": {
     "**/.gitignore": true,
     "**/.vscode": true
-  }
+  },
+  "SAP HANA Database Explorer.displaySapWebAnalyticsStartupNotification": false
 }
